[package]
name = "rop"
version = "0.1.0"
edition = "2021"
description = "cli tools for working with files using regex operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"

[[bin]]
name = "rop"
path = "src/main.rs"
